--- a/config/mh1.yaml
+++ b/config/mh1.yaml
@@ -4,3 +4,7 @@ TYPE: 'euroc'
 SETTING: '/Examples/Monocular/EuRoC.yaml'
 IMAGES: ['/MH_01_easy/mav0/cam0/data']
 TIMES: ['/home/slam/edge-slam-new/src/Examples/Monocular/EuRoC_TimeStamps/MH01.txt']
+
+# ID dispatch address and port
+HOST: '0.0.0.0'
+PORT: 10088
